<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCalculatorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/tw_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="bottom|end"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorCalculatorNumberHistoryText"
            android:textSize="24sp"
            tools:textView="9 + 2 - 1 × " />

        <TextView
            android:id="@+id/tw_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="end"
            android:text="@string/value_0"
            android:textAlignment="gravity"
            android:textColor="@color/colorCalculatorNumberCurrentText"
            android:textSize="36sp"
            app:autoSizeTextType="uniform"
            tools:textView="10" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:background="@color/colorCalculatorBackground"
        android:columnCount="4"
        android:paddingStart="8dp"
        android:paddingTop="0dp"
        android:paddingEnd="8dp"
        android:paddingBottom="0dp"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btn_fraction"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/fraction" />

        <Button
            android:id="@+id/btn_sq"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/square" />

        <Button
            android:id="@+id/btn_sq_root"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/root"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_percent"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/percentage"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_7"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/value_7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/value_8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/value_9" />

        <Button
            android:id="@+id/btn_div"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/division" />

        <Button
            android:id="@+id/btn_4"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/value_4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/value_5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/value_6" />

        <Button
            android:id="@+id/btn_mul"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/multiplication" />

        <Button
            android:id="@+id/btn_1"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/value_1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/value_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/value_3" />

        <Button
            android:id="@+id/btn_add"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/addition" />

        <Button
            android:id="@+id/btn_negate"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/plus_minus" />

        <Button
            android:id="@+id/btn_0"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/value_0" />

        <Button
            android:id="@+id/btn_decimal"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/btn_sub"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/subtraction" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/c" />

        <Button
            android:id="@+id/btn_calc"
            style="@style/CalculatorButton.Equal"
            android:background="@drawable/btn_equal_bg"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/equal" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/backspace" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>